[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/GUI/Options.gd" type="Script" id=1]
[ext_resource path="res://data/styles/GUI_bg.tres" type="StyleBox" id=2]
[ext_resource path="res://scenes/GUI/DialogWindowBaseASCII.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/GUI/ButtonBase.tscn" type="PackedScene" id=4]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ModalBG" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 2 )

[node name="base" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -189.0
margin_top = -308.0
margin_right = 189.0
margin_bottom = 245.0
dialog_ok = true
title = "Game Menu"

[node name="vbox" type="VBoxContainer" parent="base"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 61.0
margin_top = 63.0
margin_right = -63.0
margin_bottom = -35.0
custom_constants/separation = 22

[node name="Save" parent="base/vbox" instance=ExtResource( 4 )]
margin_right = 254.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 90 )
Text = "[s]ave"
ShortcutKey = "s"

[node name="Suicide" parent="base/vbox" instance=ExtResource( 4 )]
margin_top = 112.0
margin_right = 254.0
margin_bottom = 202.0
rect_min_size = Vector2( 0, 90 )
Text = "[r]estart"
ShortcutKey = "r"

[node name="Settings" parent="base/vbox" instance=ExtResource( 4 )]
margin_top = 224.0
margin_right = 254.0
margin_bottom = 314.0
rect_min_size = Vector2( 0, 90 )
Text = "[o]ptions"
ShortcutKey = "o"

[node name="SaveAndQuit" parent="base/vbox" instance=ExtResource( 4 )]
margin_top = 336.0
margin_right = 254.0
margin_bottom = 426.0
rect_min_size = Vector2( 0, 90 )
Text = "save & [q]uit"
ShortcutKey = "q"
[connection signal="pressed" from="base/vbox/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="base/vbox/Suicide" to="." method="_on_Suicide_pressed"]
[connection signal="pressed" from="base/vbox/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="base/vbox/SaveAndQuit" to="." method="_on_SaveAndQuit_pressed"]
